--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@ lerna-debug.log*
 # personal config
 src/firebase.js
 
+# excluding build directory due to security reasons
+build/
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
