--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.20.0",
     "express": "^4.17.1",
     "firebase": "^7.19.1",
+    "moment": "^2.28.0",
     "react": "^16.13.1",
     "react-currency-format": "^1.0.0",
     "react-dom": "^16.13.1",
